<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.deevvdd.wifichat.ui.client.join.JoinServerViewModel" />
        <import type="android.content.Context" />

        <import type="android.view.View" />

        <import type="com.deevvdd.wifichat.utils.NetworkUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Join Room" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/padding_normal"
            android:paddingHorizontal="@dimen/padding_big2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/tvIpAddress"
                style="@style/Theme.WifiChat.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ip_address"
                android:translationY="4dp"
                app:layout_constraintBottom_toBottomOf="@id/ipAddressInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline" />


            <EditText
                android:id="@+id/ipAddressInput"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_margin="@dimen/spacing_normal"
                android:backgroundTint="#fff"
                android:digits="0123456789."
                android:fontFamily="@font/cousine_regular"
                android:hint="@string/text_ip_address_hint"
                android:inputType="number|numberDecimal"
                android:text="@={vm.ipAddress}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvIpAddress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnScan"
                style="@style/Theme.WifiChat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:text="@string/text_scan"
                app:layout_constraintBottom_toTopOf="@+id/btnJoin" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnJoin"
                style="@style/Theme.WifiChat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{vm.enabledToJoinServer}"
                android:onClick="@{view->vm.joinServer()}"
                android:text="@string/text_join_server"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
